adding routes, reworking dir structure setting up fake signin form

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="dist/css/main.css">
   </head>
   <body>
-    <div id="content"></div>
+    <div id="main"></div>
     <script src="dist/js/app.js"></script>
   </body>
 </html>
