adding lib folder and adjusting routes

--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="utf-8">
     <title>React Starterify</title>
     <link rel="stylesheet" href="dist/css/main.css">
+    <script>          window.URL = window.URL ? window.URL :
+               window.webkitURL ? window.webkitURL : window;
+               </script>
   </head>
   <body>
     <div id="main"></div>
+    <script src="dist/lib/dropzone.js"></script>
+    <script src="dist/lib/jquery.min.js"></script>
+    <script src="dist/lib/jquery.tree.js"></script>
     <script src="dist/js/app.js"></script>
   </body>
 </html>
