updated which directory files are served from/bundled into and removed unecessary distributions of source files. Removed unused components and files. Added hello js library and setup basic authentication flow.

--- a/index.html
+++ b/index.html
@@ -1,18 +1,12 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>React Starterify</title>
-    <link rel="stylesheet" href="dist/css/main.css">
-    <script>          window.URL = window.URL ? window.URL :
-               window.webkitURL ? window.webkitURL : window;
-               </script>
-  </head>
-  <body>
-    <div id="main"></div>
-    <script src="dist/lib/dropzone.js"></script>
-    <script src="dist/lib/jquery.min.js"></script>
-    <script src="dist/lib/jquery.tree.js"></script>
-    <script src="dist/js/app.js"></script>
-  </body>
+<head>
+<meta charset="utf-8">
+<title>React Starterify</title>
+<link rel="stylesheet" href="css/main.css">
+</head>
+    <body>
+        <div id="main"></div>
+        <script src="app.js"></script>
+    </body>
 </html>
