--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>React Starterify</title>
+<title>CRN</title>
 <link rel="stylesheet" href="css/main.css">
 </head>
     <body>
