--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
     <body>
         <div id="main"></div>
-        <script src="app.js"></script>
+        <script type="text/javascript" src="assets/hello.js"></script>
+        <script type="text/javascript" src="app.js"></script>
     </body>
 </html>
