adding script for bugherd so we can track stuffs

--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,13 @@
         <div id="main"></div>
         <script type="text/javascript" src="assets/hello.js"></script>
         <script type="text/javascript" src="app.js"></script>
+    	<script type='text/javascript'>
+		(function (d, t) {
+		  var bh = d.createElement(t), s = d.getElementsByTagName(t)[0];
+		  bh.type = 'text/javascript';
+		  bh.src = '//www.bugherd.com/sidebarv2.js?apikey=1vbvmixxz2qvrucshcwueg';
+		  s.parentNode.insertBefore(bh, s);
+		  })(document, 'script');
+		</script>
     </body>
 </html>
