--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
     <body>
         <div id="main"></div>
         <script type="text/javascript" src="assets/hello.js"></script>
+        <script type="text/javascript" src="md5worker.js"></script>
         <script type="text/javascript" src="app.js"></script>
     </body>
 </html>
