--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>CRN</title>
+<title>Stanford Center for Reproducible Neuroscience</title>
 <!--GN TODO // ADD Fonts to assets -->
 <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic|Cabin:400,400italic' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="css/main.css">
