--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
     <body>
         <div id="main"></div>
-        <script type="text/javascript" src="assets/hello.js"></script>
+        <script type="text/javascript" src="assets/hello.all.min.js"></script>
         <script type="text/javascript" src="md5worker.js"></script>
         <script type="text/javascript" src="app.js"></script>
     	<script type='text/javascript'>
