Updated build process to fix warnings, build md5worker on a build, and make naming conventions more clear

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@
     <body>
         <div id="main"></div>
         <script type="text/javascript" src="assets/hello.all.min.js"></script>
-        <script type="text/javascript" src="md5worker.js"></script>
-        <script type="text/javascript" src="app.js"></script>
+        <script type="text/javascript" src="md5worker.min.js"></script>
+        <script type="text/javascript" src="app.min.js"></script>
     	<script type='text/javascript'>
 		(function (d, t) {
 		  var bh = d.createElement(t), s = d.getElementsByTagName(t)[0];
