adding back main id for react div in index

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 <link rel="stylesheet" href="css/main.css" />
 </head>
     <body>
-        <div className="app"></div>
+        <div id="main" className="app"></div>
         <script type="text/javascript" src="app.min.js"></script>
     	<script type='text/javascript'>
 		(function (d, t) {
