--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 <link id="favicon" rel="icon" type="image/png" href="/assets/favicon.ico" />
 <!--GN TODO // ADD Fonts to assets -->
 <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic|Cabin:400,400italic' rel='stylesheet' type='text/css' />
-<link rel="stylesheet" href="css/main.css" />
+<link rel="stylesheet" href="main.css" />
 </head>
     <body>
         <div id="main" className="app"></div>
