--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<base href="/"></base>
 <meta charset="utf-8">
 <!-- SITE IS NOT RESPONSIVE // Works better on mobile devices without this
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
