--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
         <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic|Cabin:400,400italic' rel='stylesheet' type='text/css' />
         <link rel="stylesheet" href="main.css" />
         <script type="text/javascript" src="/assets/papaya.js"></script>
+        <!-- Google OAuth -->
+        <script src="https://apis.google.com/js/client:platform.js"></script>
     </head>
     <body>
         <div id="main"></div>
