adding layout and style changes to the front-page

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
         -->
         <title>Stanford Center for Reproducible Neuroscience</title>
         <link id="favicon" rel="icon" type="image/png" href="/assets/favicon.ico" />
-        <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic|Cabin:400,400italic' rel='stylesheet' type='text/css' />
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,700,300italic,400italic,700italic|Cabin:400,400italic' rel='stylesheet' type='text/css' />
         <link rel="stylesheet" href="main.css" />
         <script type="text/javascript" src="/assets/papaya.js"></script>
         <!-- Google OAuth -->
