adding refactoring to admin view

--- a/src/index.html
+++ b/src/index.html
@@ -16,10 +16,10 @@
     </head>
     <body>
         <div id="main"></div>
-        <script src="https://d3tvtfb6518e3e.cloudfront.net/3/opbeat.min.js"
+<!--         <script src="https://d3tvtfb6518e3e.cloudfront.net/3/opbeat.min.js"
         data-org-id="6f7a08376feb4427bc9a9310960358ae"
         data-app-id="3b8e3e7b79">
-        </script>
+        </script> -->
         <script type="text/javascript" src="app.min.js"></script>
         <script type='text/javascript'>
             (function (d, t) {
