--- a/app/src/index.html
+++ b/app/src/index.html
@@ -6,7 +6,7 @@
         <!-- SITE IS NOT RESPONSIVE // Works better on mobile devices without this
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
         -->
-        <title>Stanford Center for Reproducible Neuroscience</title>
+        <title>OpenNeuro</title>
         <link id="favicon" rel="icon" type="image/png" href="/assets/favicon.ico" />
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,300italic,400italic,700italic|Cabin:400,400italic' rel='stylesheet' type='text/css' />
         <link rel="stylesheet" href="main.css" />
