--- a/app/src/index.html
+++ b/app/src/index.html
@@ -10,25 +10,18 @@
         <link id="favicon" rel="icon" type="image/png" href="/assets/favicon.ico" />
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,300italic,400italic,700italic|Cabin:400,400italic' rel='stylesheet' type='text/css' />
         <link rel="stylesheet" href="main.css" />
-        <script type="text/javascript" src="/assets/papaya.js"></script>
+        <script type="text/javascript" src="/assets/papaya.js" async></script>
         <!-- Google OAuth -->
-        <script src="https://apis.google.com/js/client:platform.js"></script>
+        <script src="https://apis.google.com/js/client:platform.js" async></script>
     </head>
     <body>
         <div id="main"></div>
         <script src="https://d3tvtfb6518e3e.cloudfront.net/3/opbeat.min.js"
         data-org-id="6f7a08376feb4427bc9a9310960358ae"
-        data-app-id="3b8e3e7b79">
+        data-app-id="3b8e3e7b79"
+        async>
         </script>
         <script type="text/javascript" src="app.min.js"></script>
-        <script type='text/javascript'>
-            (function (d, t) {
-                var bh = d.createElement(t), s = d.getElementsByTagName(t)[0];
-                bh.type = 'text/javascript';
-                bh.src = '//www.bugherd.com/sidebarv2.js?apikey=1vbvmixxz2qvrucshcwueg';
-                s.parentNode.insertBefore(bh, s);
-            })(document, 'script');
-        </script>
     </body>
 </html>
 
