--- a/app/src/index.html
+++ b/app/src/index.html
@@ -21,7 +21,7 @@
         data-app-id="3b8e3e7b79"
         async>
         </script>
-        <script type="text/javascript" src="app.min.js"></script>
+        <script type="text/javascript" src="app.bundle.js"></script>
     </body>
 </html>
 
