--- a/app/src/index.html
+++ b/app/src/index.html
@@ -17,6 +17,7 @@
         data-app-id="3b8e3e7b79"
         async>
         </script>
+        <script src="/assets/papaya.js" async></script>
     </body>
 </html>
 
