Fix missing papaya dep after adding hash to filename.

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -17,7 +17,7 @@
         data-app-id="3b8e3e7b79"
         async>
         </script>
-        <script src="/papaya.js" async></script>
+        <script src="/papaya-831b0eb6.js" async></script>
     </body>
 </html>
 
