--- a/app/src/index.html
+++ b/app/src/index.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <base href="/"></base>
-        <meta charset="utf-8">
+        <meta http-equiv="expires" content="0" />
+        <meta charset="utf-8" />
         <!-- SITE IS NOT RESPONSIVE // Works better on mobile devices without this
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
         -->
