Use a container as the source of content instead of untracked directory.

--- a/packages/openneuro-app/src/index.html
+++ b/packages/openneuro-app/src/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <base href="/"></base>
-        <meta http-equiv="expires" content="0" />
-        <meta charset="utf-8" />
-        <!-- SITE IS NOT RESPONSIVE // Works better on mobile devices without this
+
+<head>
+    <base href="/"></base>
+    <meta http-equiv="expires" content="0" />
+    <meta charset="utf-8" />
+    <!-- SITE IS NOT RESPONSIVE // Works better on mobile devices without this
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
         -->
-        <title>OpenNeuro</title>
-        <link id="favicon" rel="icon" type="image/png" href="/assets/favicon.ico" />
-        <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,300italic,400italic,700italic|Cabin:400,400italic' rel='stylesheet' type='text/css' />
-    </head>
-    <body>
-        <div id="main"></div>
-        <script src="/papaya-831b0eb6.js" async></script>
-    </body>
-</html>
+    <title>OpenNeuro</title>
+    <link id="favicon" rel="icon" type="image/png" href="/assets/favicon.ico" />
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,300italic,400italic,700italic|Cabin:400,400italic'
+        rel='stylesheet' type='text/css' />
+</head>
 
+<body>
+    <div id="main"></div>
+    <script src="/content/openneuro-content.js" /></script>
+    <script src="/papaya-831b0eb6.js" async></script>
+</body>
+
+</html>
