Fix warning about cross origin config.json (resulting in duplicate fetch)

--- a/packages/openneuro-app/src/index.html
+++ b/packages/openneuro-app/src/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=800, initial-scale=2"/>
     <title>OpenNeuro</title>
     <link id="favicon" rel="icon" type="image/png" href="/content/img/favicon.ico" />
-    <link rel="preload" href="/crn/config.json" as="fetch">
+    <link rel="preload" href="/crn/config.json" as="fetch" crossorigin>
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link rel="preconnect" href="https://netdna.bootstrapcdn.com/" crossorigin>
     <link rel="preload" href="https://fonts.gstatic.com/s/cabin/v12/u-4x0qWljRw-Pd8w__0.woff2" as="font" crossorigin>
