Fixed incorrect meat viewport tag.

--- a/packages/openneuro-app/src/index.html
+++ b/packages/openneuro-app/src/index.html
@@ -5,7 +5,7 @@
     <base href="/"></base>
     <meta http-equiv="expires" content="0" />
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=800, initial-scale=2"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>OpenNeuro</title>
     <link id="favicon" rel="icon" type="image/png" href="/content/img/favicon.ico" />
     <link rel="preload" href="/crn/config.json" as="fetch" crossorigin>
